fixed overflow. added navbar

--- a/style.css
+++ b/style.css
@@ -8,37 +8,69 @@
     margin: 15px;
     padding-left: 150px;
     width: 100%;
-  }
-  
-  .row {
+    align-items: center;
+}
+
+.row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-  }
+}
   
-  .column {
+.column {
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
     flex: 1;
-  }
+}
   
-  .column-1 {
+.column-1 {
     height: 100px;
     width: 600px;
     margin: 0;
-  }
+}
   
-  .column-2 {
+.column-2 {
     height: 100px;
     width: 600px;
     margin: 0;
-  }
+}
 
+/*Nav Bar */
+
+#nav {
+    height: 75px;
+    width: 100%;
+    background-color: white;
+    position: fixed;
+    text-align: right;
+    border-bottom: 2px solid black;
+}
+
+#navlink {
+    margin-right: 50px;
+}
+
+.navlink {
+    display: inline-block;
+    color: black;
+    font-family: Jost;
+    font-size: 16px;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    margin: 10px;
+}
+
+a:hover {
+    color: white;
+    background-color: black;
+}
 /*Header Section */
 #header {
-    width: 1920px;
+    width: 100%;
     height: 650px;
     background-color: black;
     display: flex;
@@ -77,13 +109,14 @@
     padding-left: 30px;
     padding-right: 30px;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 /*Our Story Section */
 #story-section {
     background-color: #F3F3F3;
     display: flex;
-    width: 1920px;
+    width: 100%;
     height: 610px;
 }
 
@@ -108,7 +141,7 @@
     background-color: black;
     display: flex;
     height: 400px;
-    width: 1920px;
+    width: 100%;
     align-items: center;
 }
 
@@ -125,7 +158,7 @@
 #mission-section {
     background-color: #F3F3F3;
     display: flex;
-    width: 1920px;
+    width: 100%;
     height: 620px;
 }
 
@@ -149,18 +182,19 @@
 /*Testimonials Section */
 #testimonials-section {
     background-color: black;
-    width: 1920px;
+    display: flex;
+    width: 100%;
     height: 564px;
     align-items: center;
 }
 
 #testimonial-title {
-    color: white;
-    font-family: 'Averia Serif Libre';
-    font-size: 40px;
-    width: 500px;
     text-align: center;
-    padding-top: 125px;
+    width: 500px;
+    font-size: 40px;
+    font-family: 'Averia Serif Libre';
+    font-weight: bold;
+    color: white;
 }
 
 #testimonial-text-1 {
@@ -187,7 +221,7 @@
 /*Contact Section */
 #contact-section {
     background-color: #F3F3F3;
-    width: 1920px;
+    width: 100%;
     height: 795px;
 }
 
@@ -204,7 +238,7 @@
 /*Footer */
 #footer {
     background-color: black;
-    width: 1920px;
+    width: 100%;
     height: 350px;
 }
 
@@ -251,6 +285,7 @@
     padding-left: 30px;
     padding-right: 30px;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 /*Form */
